--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full bg-gray-100">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
@@ -9,7 +9,7 @@
 
 		%sveltekit.head%
 	</head>
-	<body>
+	<body class="h-full">
 		%sveltekit.body%
 	</body>
 </html>
