--- a/src/app.html
+++ b/src/app.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Backed</title>
-		<meta name="description" content="Backed visualizes backing of crypto currencies." />
+		<title>backed</title>
+		<meta name="description" content="backed visualizes backing of crypto currencies." />
 
 		%sveltekit.head%
 	</head>
