--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>backed</title>
-		<meta name="description" content="backed visualizes backing of crypto currencies." />
+		<meta name="description" content="Asset backing visualized." />
 
 		%sveltekit.head%
 	</head>
