--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>backed</title>
 		<meta name="description" content="Asset backing visualized." />
-		<meta name="color-scheme" content="light" />
+		<meta name="color-scheme" content="light only" />
 
 		%sveltekit.head%
 	</head>
