--- a/src/app.html
+++ b/src/app.html
@@ -2,10 +2,15 @@
 <html lang="en" class="h-full bg-gray-200">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="color-scheme" content="only light" />
-
+		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png" />
+		<link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
+		<link rel="mask-icon" href="%sveltekit.assets%/safari-pinned-tab.svg" color="#3bc7ff" />
+		<meta name="msapplication-TileColor" content="#3bc7ff" />
+		<meta name="theme-color" content="#ffffff" />
 		%sveltekit.head%
 	</head>
 	<body class="h-full">
