--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full bg-gray-200 overflow-x-clip lg:scroll-smooth">
+<html lang="en" class="h-full bg-gray-200 overflow-x-clip scroll-smooth">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,7 +13,7 @@
 		<meta name="theme-color" content="#ffffff" />
 		%sveltekit.head%
 	</head>
-	<body class="h-full">
+	<body class="h-full overflow-x-clip scroll-smooth">
 		%sveltekit.body%
 	</body>
 </html>
