--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,6 @@
 		%sveltekit.head%
 	</head>
 	<body class="h-full overflow-x-clip">
-		%sveltekit.body%
+		<div>%sveltekit.body%</div>
 	</body>
 </html>
