--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,6 @@
 		%sveltekit.head%
 	</head>
 	<body class="h-full overflow-x-clip">
-		<div>%sveltekit.body%</div>
+		<div class="flex flex-col min-h-full">%sveltekit.body%</div>
 	</body>
 </html>
