--- a/404.html
+++ b/404.html
@@ -12,18 +12,18 @@
 		<meta name="msapplication-TileColor" content="#3bc7ff" />
 		<meta name="theme-color" content="#ffffff" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.80abc5c7.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.30ed7b33.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.3647f7f4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.3c8f9338.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/paths.ef29cfd8.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.32148e62.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.45f14fa3.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/paths.df0cfb7e.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.68403dcf.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.41c905a7.js">
 	</head>
 	<body class="h-full overflow-x-clip">
 		<div class="flex flex-col min-h-full">
 			<script>
 				{
-					__sveltekit_1ffmgwt = {
+					__sveltekit_10lvy6x = {
 						base: "",
 						env: {"PUBLIC_DOMAIN":"https://bcked.com"}
 					};
@@ -31,8 +31,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.80abc5c7.js"),
-						import("/_app/immutable/entry/app.32148e62.js")
+						import("/_app/immutable/entry/start.30ed7b33.js"),
+						import("/_app/immutable/entry/app.68403dcf.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
