--- a/404.html
+++ b/404.html
@@ -12,18 +12,18 @@
 		<meta name="msapplication-TileColor" content="#3bc7ff" />
 		<meta name="theme-color" content="#ffffff" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.30ed7b33.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.c1cdad9e.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.3647f7f4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.45f14fa3.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/paths.df0cfb7e.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.68403dcf.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.075a178e.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/paths.c3f4a8c8.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.a46e4bde.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.41c905a7.js">
 	</head>
 	<body class="h-full overflow-x-clip">
 		<div class="flex flex-col min-h-full">
 			<script>
 				{
-					__sveltekit_10lvy6x = {
+					__sveltekit_1n6zqnv = {
 						base: "",
 						env: {"PUBLIC_DOMAIN":"https://bcked.com"}
 					};
@@ -31,8 +31,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.30ed7b33.js"),
-						import("/_app/immutable/entry/app.68403dcf.js")
+						import("/_app/immutable/entry/start.c1cdad9e.js"),
+						import("/_app/immutable/entry/app.a46e4bde.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
