--- a/404.html
+++ b/404.html
@@ -12,18 +12,18 @@
 		<meta name="msapplication-TileColor" content="#3bc7ff" />
 		<meta name="theme-color" content="#ffffff" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.73915ab3.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.1e82d739.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.3647f7f4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.e9ff108d.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/paths.4d755295.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.8c3a5e8a.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.19764b8d.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/paths.2829c54f.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.5d32d69a.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.41c905a7.js">
 	</head>
 	<body class="h-full overflow-x-clip">
 		<div class="flex flex-col min-h-full">
 			<script>
 				{
-					__sveltekit_140fb4p = {
+					__sveltekit_taqonq = {
 						base: "",
 						env: {"PUBLIC_DOMAIN":"https://bcked.com"}
 					};
@@ -31,8 +31,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.73915ab3.js"),
-						import("/_app/immutable/entry/app.8c3a5e8a.js")
+						import("/_app/immutable/entry/start.1e82d739.js"),
+						import("/_app/immutable/entry/app.5d32d69a.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
