--- a/404.html
+++ b/404.html
@@ -12,18 +12,18 @@
 		<meta name="msapplication-TileColor" content="#3bc7ff" />
 		<meta name="theme-color" content="#ffffff" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.68bdb25d.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.690b9faf.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.3647f7f4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.e45bc8ca.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/paths.df4a0662.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.866991cb.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.fe9d4a5a.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/paths.c0dfbad9.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.398d8c6c.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.41c905a7.js">
 	</head>
 	<body class="h-full overflow-x-clip">
 		<div class="flex flex-col min-h-full">
 			<script>
 				{
-					__sveltekit_1gf2ufv = {
+					__sveltekit_bjypmg = {
 						base: "",
 						env: {"PUBLIC_DOMAIN":"https://bcked.com"}
 					};
@@ -31,8 +31,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.68bdb25d.js"),
-						import("/_app/immutable/entry/app.866991cb.js")
+						import("/_app/immutable/entry/start.690b9faf.js"),
+						import("/_app/immutable/entry/app.398d8c6c.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
