Manually update page

--- a/404.html
+++ b/404.html
@@ -12,18 +12,18 @@
 		<meta name="msapplication-TileColor" content="#3bc7ff" />
 		<meta name="theme-color" content="#ffffff" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.908e3297.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.fcecabe4.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.3647f7f4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.05fd563d.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/paths.5b9fdc72.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.d26a7c16.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.73dd6b83.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/paths.bc47820b.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.8ae6b736.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.41c905a7.js">
 	</head>
 	<body class="h-full overflow-x-clip">
 		<div class="flex flex-col min-h-full">
 			<script>
 				{
-					__sveltekit_1j979zv = {
+					__sveltekit_s3gnea = {
 						base: "",
 						env: {"PUBLIC_DOMAIN":"https://bcked.com"}
 					};
@@ -31,8 +31,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.908e3297.js"),
-						import("/_app/immutable/entry/app.d26a7c16.js")
+						import("/_app/immutable/entry/start.fcecabe4.js"),
+						import("/_app/immutable/entry/app.8ae6b736.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
