--- a/404.html
+++ b/404.html
@@ -12,18 +12,18 @@
 		<meta name="msapplication-TileColor" content="#3bc7ff" />
 		<meta name="theme-color" content="#ffffff" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.fcecabe4.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.d4ee139d.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.3647f7f4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.73dd6b83.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/paths.bc47820b.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.8ae6b736.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.d7f310d3.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/paths.c031a5f6.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.ba3e4643.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.41c905a7.js">
 	</head>
 	<body class="h-full overflow-x-clip">
 		<div class="flex flex-col min-h-full">
 			<script>
 				{
-					__sveltekit_s3gnea = {
+					__sveltekit_m84xbl = {
 						base: "",
 						env: {"PUBLIC_DOMAIN":"https://bcked.com"}
 					};
@@ -31,8 +31,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.fcecabe4.js"),
-						import("/_app/immutable/entry/app.8ae6b736.js")
+						import("/_app/immutable/entry/start.d4ee139d.js"),
+						import("/_app/immutable/entry/app.ba3e4643.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
