--- a/404.html
+++ b/404.html
@@ -12,18 +12,18 @@
 		<meta name="msapplication-TileColor" content="#3bc7ff" />
 		<meta name="theme-color" content="#ffffff" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.a81e80a9.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.61232f6c.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.3647f7f4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.60834bea.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/paths.784bbdc7.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.06650913.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.5baccbc8.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/paths.9f9dfcd4.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.b03b611a.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.41c905a7.js">
 	</head>
 	<body class="h-full overflow-x-clip">
 		<div class="flex flex-col min-h-full">
 			<script>
 				{
-					__sveltekit_1vg5xci = {
+					__sveltekit_1dgqvtk = {
 						base: "",
 						env: {"PUBLIC_DOMAIN":"https://bcked.com"}
 					};
@@ -31,8 +31,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.a81e80a9.js"),
-						import("/_app/immutable/entry/app.06650913.js")
+						import("/_app/immutable/entry/start.61232f6c.js"),
+						import("/_app/immutable/entry/app.b03b611a.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
