--- a/404.html
+++ b/404.html
@@ -12,18 +12,18 @@
 		<meta name="msapplication-TileColor" content="#3bc7ff" />
 		<meta name="theme-color" content="#ffffff" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.cdf1c1e5.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.edec600e.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.3647f7f4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.9c0498fc.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/paths.0d57cc29.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.025437d9.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.75bb49bd.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/paths.94a9ae04.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.dd6b7283.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.41c905a7.js">
 	</head>
 	<body class="h-full overflow-x-clip">
 		<div class="flex flex-col min-h-full">
 			<script>
 				{
-					__sveltekit_1n8wi2b = {
+					__sveltekit_1n98r2z = {
 						base: "",
 						env: {"PUBLIC_DOMAIN":"https://bcked.com"}
 					};
@@ -31,8 +31,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.cdf1c1e5.js"),
-						import("/_app/immutable/entry/app.025437d9.js")
+						import("/_app/immutable/entry/start.edec600e.js"),
+						import("/_app/immutable/entry/app.dd6b7283.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
