--- a/404.html
+++ b/404.html
@@ -12,18 +12,18 @@
 		<meta name="msapplication-TileColor" content="#3bc7ff" />
 		<meta name="theme-color" content="#ffffff" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.5cb4d4ad.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.54a34cf9.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.3647f7f4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.d07205dd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/paths.71466653.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.dcc1bf0f.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.4e279a6c.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/paths.2d7d99b2.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.0fc68aac.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.41c905a7.js">
 	</head>
 	<body class="h-full overflow-x-clip">
 		<div class="flex flex-col min-h-full">
 			<script>
 				{
-					__sveltekit_ngxaot = {
+					__sveltekit_15xibqv = {
 						base: "",
 						env: {"PUBLIC_DOMAIN":"https://bcked.com"}
 					};
@@ -31,8 +31,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.5cb4d4ad.js"),
-						import("/_app/immutable/entry/app.dcc1bf0f.js")
+						import("/_app/immutable/entry/start.54a34cf9.js"),
+						import("/_app/immutable/entry/app.0fc68aac.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
