--- a/404.html
+++ b/404.html
@@ -12,18 +12,18 @@
 		<meta name="msapplication-TileColor" content="#3bc7ff" />
 		<meta name="theme-color" content="#ffffff" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.328cbbef.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.9e6561db.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.3647f7f4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.1ca274a1.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/paths.597fafcf.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.30bec6c6.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.72b3c46f.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/paths.f1fc3302.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.54c8d22f.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.41c905a7.js">
 	</head>
 	<body class="h-full overflow-x-clip">
 		<div class="flex flex-col min-h-full">
 			<script>
 				{
-					__sveltekit_vcf900 = {
+					__sveltekit_1cf3tpb = {
 						base: "",
 						env: {"PUBLIC_DOMAIN":"https://bcked.com"}
 					};
@@ -31,8 +31,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.328cbbef.js"),
-						import("/_app/immutable/entry/app.30bec6c6.js")
+						import("/_app/immutable/entry/start.9e6561db.js"),
+						import("/_app/immutable/entry/app.54c8d22f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
