--- a/404.html
+++ b/404.html
@@ -12,18 +12,18 @@
 		<meta name="msapplication-TileColor" content="#3bc7ff" />
 		<meta name="theme-color" content="#ffffff" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.535ba716.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.81b9d2a8.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.3647f7f4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.e188d260.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/paths.5e455d1d.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.97291d6d.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.df2c4200.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/paths.55c80e35.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.a69c25f2.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.41c905a7.js">
 	</head>
 	<body class="h-full overflow-x-clip">
 		<div class="flex flex-col min-h-full">
 			<script>
 				{
-					__sveltekit_1ooagu6 = {
+					__sveltekit_11yxtgy = {
 						base: "",
 						env: {"PUBLIC_DOMAIN":"https://bcked.com"}
 					};
@@ -31,8 +31,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.535ba716.js"),
-						import("/_app/immutable/entry/app.97291d6d.js")
+						import("/_app/immutable/entry/start.81b9d2a8.js"),
+						import("/_app/immutable/entry/app.a69c25f2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
