--- a/404.html
+++ b/404.html
@@ -12,18 +12,18 @@
 		<meta name="msapplication-TileColor" content="#3bc7ff" />
 		<meta name="theme-color" content="#ffffff" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.26219f06.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.01e126b4.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.3647f7f4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.a968d2e6.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/paths.817d848d.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.c3b2423b.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.443ded3a.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/paths.d161b681.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.5afc6e6c.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.41c905a7.js">
 	</head>
 	<body class="h-full overflow-x-clip">
 		<div class="flex flex-col min-h-full">
 			<script>
 				{
-					__sveltekit_1tdc2dx = {
+					__sveltekit_11u8kb5 = {
 						base: "",
 						env: {"PUBLIC_DOMAIN":"https://bcked.com"}
 					};
@@ -31,8 +31,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.26219f06.js"),
-						import("/_app/immutable/entry/app.c3b2423b.js")
+						import("/_app/immutable/entry/start.01e126b4.js"),
+						import("/_app/immutable/entry/app.5afc6e6c.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
